# cargo-deltabuild

./: .editorconfig  .gitignore  .spelling  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  clippy.toml  codecov.yml  config.toml.example  constants.env  deny.toml  rust-toolchain.toml  spellcheck.toml
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  release.yml
cargo-delta/: Cargo.toml
cargo-delta-lib/: Cargo.toml
cargo-delta-lib/src/: config.rs  lib.rs  utils.rs
cargo-delta/src/: main.rs
cargo-deltabuild/: Cargo.toml
cargo-deltabuild-lib/: Cargo.toml
cargo-deltabuild-lib/src/: lib.rs  utils.rs
cargo-deltabuild/src/: main.rs
crates/delta/: Cargo.toml
crates/delta-lib/: Cargo.toml
crates/delta-lib/src/: cargo.rs  files.rs  git.rs  host.rs  lib.rs  test_helpers.rs  utils.rs
crates/delta/src/: main.rs
crates/deltabuild/: Cargo.toml
crates/deltabuild/src/: main.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
src/: cargo.rs  config.rs  crates.rs  error.rs  files.rs  git.rs  main.rs  utils.rs
