[package]
name = "cargo-delta-lib"
description = "Internal library for cargo-delta"
keywords = ["cargo", "workspace", "ci", "build", "git"]
categories = ["development-tools"]
readme = "../README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context", "color"] }
encoding_rs = { workspace = true, features = ["alloc"] }
glob.workspace = true
normpath.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["std"] }
syn = { workspace = true, features = ["full", "visit", "parsing", "printing"] }
thiserror.workspace = true
toml = { workspace = true, features = ["parse", "display", "serde"] }

[lints]
workspace = true
