[package]
name = "cargo-delta"
description = "Detects which crates in a Cargo workspace are affected by changes in a Git feature branch."
keywords = ["cargo", "workspace", "ci", "build", "git"]
categories = ["development-tools", "development-tools::cargo-plugins"]
readme = "../README.md"
authors = ["Jan Guttek <jan@guttek.net>"]

version = "0.2.0"
edition = "2024"
rust-version = "1.93.0"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true
