[package]
name = "cargo-delta-lib"
description = "Implementation detail of the cargo-delta tool. Do not depend on this crate directly."
keywords = ["cargo", "workspace", "ci", "build", "git"]
categories = ["development-tools", "development-tools::cargo-plugins"]
readme = "../../README.md"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context", "color"] }
encoding_rs = { workspace = true, features = ["alloc"] }
glob.workspace = true
normpath.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["std"] }
syn = { workspace = true, features = ["full", "visit", "parsing", "printing"] }
thiserror.workspace = true
toml = { workspace = true, features = ["parse", "display", "serde"] }

[lints]
workspace = true
