[package]
name = "cargo-delta"
description = "Detects which crates in a Cargo workspace are affected by changes in a Git feature branch."
keywords = ["cargo", "workspace", "ci", "build", "git"]
categories = ["development-tools", "development-tools::cargo-plugins"]
readme = "../../README.md"

authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cargo-delta-lib.workspace = true

[lints]
workspace = true

