[package]
name = "cargo-deltabuild"
description = "Deprecated: use cargo-delta instead."
keywords = ["cargo", "workspace", "ci", "build", "git"]
categories = ["development-tools", "development-tools::cargo-plugins"]
readme = "../../README.md"
authors = ["Jan Guttek <jan@guttek.net>"]

version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[lints]
workspace = true
